<resources>
    <string name="app_name">Profedex</string>

    <string-array name="oak_array">
        <item>Ola! Bem-vindo ao Centro de Tecnologia da UFRJ! Meu nome é Carvalho!</item>
        <item>Sou Doutor, Orientador, Coordenador, Chefe de Departamento, Senhor Imperador do Universo Triunfal, mas pode me chamar de Professor Carvalho!</item>
        <item>Esse campus é habitado por estranhas criaturas chamadas PROFESSORES! Para algumas pessoas, PROFESSORES são prestativos,</item>
        <item>Para outras, PROFESSORES são memes e participam de Polifights. Por minha vez… Estudo PROFESSORES como profissão.</item>
        <item>Eu ia lhe perguntar seu nome e lhe apresentar ao meu neto, mas ele sumiu e deve estar em Pernambuco no momento.</item>
        <item>Estou interessado em preencher uma Profedéx com as descricoes de 150 professores. Você poderia me ajudar?</item>
        <item>VOCE! Sua aventura no mundo da UFRJ esta para se iniciar. Um mundo de sonhos e aventuras lhe aguardam! Ao trabalho!!</item>
    </string-array>

    <string name="oak_text1">Ola! Bem-vindo ao Centro de Tecnologia da UFRJ! Meu nome é Carvalho!</string>
    <string name="oak_text2"> Sou Doutor, Orientador, Coordenador, Chefe de Departamento, Senhor Imperador do Universo Triunfal, mas pode me chamar de Professor Carvalho!</string>
    <string name="oak_text3">Esse campus é habitado por estranhas criaturas chamadas PROFESSORES! Para algumas pessoas, PROFESSORES são prestativos,</string>
    <string name="oak_text4">Para outras, PROFESSORES são memes e participam de Polifights. Por minha vez… Estudo PROFESSORES como profissão.</string>
    <string name="oak_text5"> Eu ia lhe perguntar seu nome e lhe apresentar ao meu neto, mas ele sumiu e deve estar em Pernambuco no momento.</string>
    <string name="oak_text6">Estou interessado em preencher uma Profedéx com as descricoes de 150 professores. Você poderia me ajudar?</string>
    <string name="oak_text7">VOCE! Sua aventura no mundo da UFRJ esta para se iniciar. Um mundo de sonhos e aventuras lhe aguardam! Ao trabalho!!</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="lorem_short">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </string>

    <string name="text_view_hint">1: PROFESSOR CARVALHO</string>
    <string name="content_description">Image of teacher</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Nome</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Crie um usuário</string>
    <string name="btn_link_to_login">Registrado. Faça Login</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Nome</string>
    <string name="title_activity_centro">CentroActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_teacher_label">Adicionar Professor</string>
    <string name="teacher_name_hint">Nome do professor</string>
    <string name="description_hint">Descrição</string>
    <string name="teacher_room_hint">Sala do professor</string>
    <string name="teacher_email_hint">email do professor</string>
    <string name="walter_white">Walter White</string>
    <string name="dialog_message_login">Você precisa fazer login para fazer isso.</string>
    <string name="dialog_title_login">Faça login.</string>
    <string name="login">Fazer login</string>
    <string name="cancel">Cancelar</string>
</resources>
