<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.partiufast.profedex.activities.AddTeacherActivity">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/viewA"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:background="@android:color/holo_red_light"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Adicione uma foto ao perfil do professor"
                android:layout_centerInParent="true"
                android:textColor="@android:color/white"
                android:id="@+id/hintTextView"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/pictureImageView"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:visibility="gone"/>
        </RelativeLayout>

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:id="@+id/viewB"
        android:layout_weight="0.4"
        >

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <EditText
        android:id="@+id/teacher_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/teacher_name_hint"
        android:imeActionId="@+id/name"
        android:imeActionLabel="@string/add_teacher_label"
        android:imeOptions="actionUnspecified"
        android:maxLines="1"
        android:singleLine="true"/>
</android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
        android:id="@+id/input_description"
        android:hint="@string/description_hint"
        android:inputType="textMultiLine"
        android:lines="4"
        android:gravity="top|start"
        android:maxLines="6"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:scrollbars="vertical"
        />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_room"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/room_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/teacher_room_hint"
                android:imeActionId="@+id/room_edit_text"
                android:imeActionLabel="@string/teacher_room_hint"
                android:imeOptions="actionUnspecified"
                android:maxLines="1"
                android:singleLine="true"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_teacher_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_teacher_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/teacher_email_hint"
                android:imeActionId="@+id/teacher_email_hint"
                android:imeActionLabel="@string/teacher_email_hint"
                android:imeOptions="actionUnspecified"
                android:maxLines="1"
                android:singleLine="true"/>
        </android.support.design.widget.TextInputLayout>



        <Button
            style="button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_teacher_label"
            android:id="@+id/finish_adding_teacher_button"
            android:layout_marginTop="16dp"
            android:textColor="#ffffff"
            android:background="@android:color/holo_red_dark"
            />

           <!-- <Button
                style="button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_teacher_label"
                android:id="@+id/finish_adding_teacher_button"
                android:layout_marginTop="16dp"
                android:textColor="#ffffff"
                android:backgroundTint="#d50000"/>-->

    </LinearLayout>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/addPhotoTeacher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        android:src="@android:drawable/ic_menu_camera"
        app:layout_anchor="@id/viewA"
        app:layout_anchorGravity="bottom|right|end"/>

</android.support.design.widget.CoordinatorLayout>
